# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/ammo/solution/: ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/load/solution/: ammo.txt  load.yaml
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/bookypedia-2/solution/: conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
sprint4/problems/final-task/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/final-task/solution/src/: db.cpp  db.h  extra_data.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  loot_generator.h  main.cpp  model.cpp  model.h  model_serialization.h  request_handler.cpp  request_handler.h  sdk.h  tagged.h  ticker.h
sprint4/problems/final-task/solution/tests/: tests.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/data/: save
sprint4/problems/state_serialization/solution/src/: json_loader.h  main.cpp  model.cpp  model.h  model_serialization.h
(+104 files in other folders)
